# task-runner

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-01af78d20c8360ddbba20e8451b2e4b2e00e5794664a5f99cf827edf0f8eb898.json  query-14e22ddecf178b88715484208a6cfe06aa078c793b72138d448743aea2516a15.json  query-14e77db5f82fd058b1ce3adf47536bfd8a52e110d48cbc165435dba553d456e9.json  query-222697b0d69e10bf62a32c8b633e98624c4bf3585727e207c2ed47f0da0a80c3.json  query-2914b5e49c04c90ea72a71c008262e752b227295174782c2cf91eaed5982f9f3.json  query-323e6d29710010520bc3fc8d1ed849e80670718edd62f80f90a208c03a430173.json  query-396adb96f3a8fcab61de94eda13d4074f0dbe1fff82ee3683be1638a783a7094.json  query-399c52ee74885ca1189f7582a3c962ad0f75a655c7f325f12374ff873f532f78.json  query-3f02ce4f6b6d9bc6c17c661fe2b4d9807473c57283026d32c17030ff06675ea5.json  query-3f8ab9c21e446732a1cab8818506522e100621fd8679611256f569f956beb182.json  query-5a0f89ce3e759c5394db799cde475b866fa48dfddb74e11f5134d145f712e9a0.json  query-60c8da7712fbc3d6c0dedfa5e56911a061b24accfdcc864484fad3b47d308bbe.json  query-612bb26b8e0caac8ac8b433587f4cd4fcedbec142001b7eed281ccac9f6d6deb.json  query-78f31750fb99ae341d62204ee44b1650448b2d1747991c72edc041d2e40e5cd9.json  query-8d8fe66beeb36db814681538fe6ab832b98ac4708c7976e5cdab1c880f902201.json  query-9e63e5b4968573a8dba5a27e7611852d78eae62156e6c73cf6145f95f5101251.json  query-9f652a16676248716a7e3eb6aa986d581347d59ca6900932f740ebb69bf929d4.json  query-a1eb96157546b1232c55db1a6bbd637ff0027684a76f9ab0055b5adf9f185c50.json  (+6 more)
src/: api.rs  db.rs  main.rs  worker.rs
